Terraform/aws/alb.tf
resource "aws_lb" "main" {
  name               = "sakurai-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [aws_subnet.sakurai_subnet_a[0].id, aws_subnet.sakurai_subnet_c[0].id]
}

# ELB Target Group
resource "aws_lb_target_group" "main" {
  name   = "sakurai-alb-target"
  vpc_id = aws_vpc.sakurai_vpc.id

  # ALBからECSタスクのコンテナへトラフィックを振り分ける設定
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"

  # コンテナへの死活監視設定
  health_check {
    port = 80
    path = "/"
  }
}

# ALB Listener
resource "aws_lb_listener" "main" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}
